BEEBEEP (Secure Lan Messanger) - CHANGELOG

BeeBEEP 3.2.0
- Added status tooltip on the user's avatar/icon
- Added a check and an alert on same nickname/account of the users
- Added "DisablePrivateChats" option on beebeep.rc file

BeeBEEP 3.0.9
- The emoticon icon is now showed in detached chat (bug fixed)
- Added BUZZ for the private chats

BeeBEEP 3.0.8
- Chat messages are now saved on disconnection
- Fixed a bug in option "HideMainToolbar"
- Broadcast processes are now simplified and optimized (some options are now obsolete, see BEEHELP.txt)
- The file transferred via chat are now showed only in the right chat window
- Preserve last modification timestamp of the transferred files
- The message "User is writing" is now shown in the right chat window if it is visible
- "Signature" option added in beebeep.rc file
- "Open folder" link (shown after a file transferred) also highlight the selected file in the folder (only for windows and macosx)
- "UseOnlyTextEmoticons" option added in beebeep.rc file
- Fixed a bug on smart selection of the data folder (now if the application folder is not writeable, BeeBEEP save its data to UserAppData folder)
- Users can be sorted in ascending or descending order, by name, by status, by unread messages and by priority (default)
- A "new message notification" is shown also when a new file is received from a user
- Fixed a bug in emoticon parsing
- Hive protocol optimized
- Fixed a bug in opening url with diacritic characters in path
- Preset Messages
- Added option to read a "beegroups.ini" file (beta)
- Added option to set layout in RTL mode (beta)

BeeBEEP 3.0.7
- ShareBox: new feature in beta (can share files like dropbox with all users connected)
- Added "Find text" and "Print" options in history (shortcut or right click)
- Fixed a bug in "Send offline messages"
- Added CopyMastro plugin support
- "Clear all read messages on closing chat window" option added
- "File notification on system tray" option added